--- a/index.scss
+++ b/index.scss
@@ -211,21 +211,29 @@ END GLOBAL
 
     &__column {
       width: 100%;
-      height: 150px;
-      background-color: var(--cyan);
+      height: 140px;
+      background-color: var(--soft-red);
       border-radius: 3px;
+      &:hover {
+        opacity: 0.7;
+        cursor: pointer;
+      }
+
+      &--tallest {
+        background-color: var(--cyan);
+      }
     }
 
     &__item {
       flex: 1 1;
-      .label {
-        margin-top: 8px;
+    }
 
-        font-weight: 400;
-        font-size: 12px;
-        line-height: 16px;
-        color: var(--medium-brown);
-      }
+    &__label {
+      margin-top: 8px;
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 16px;
+      color: var(--medium-brown);
     }
   }
 
