--- a/index.scss
+++ b/index.scss
@@ -155,6 +155,7 @@ END GLOBAL
 .wrapper {
   width: 100%;
   margin: 20px;
+  max-width: 400px;
 }
 
 .header {
@@ -202,12 +203,27 @@ END GLOBAL
 
   .chart {
     width: 100%;
-    height: 200px;
+    height: 220px;
 
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
     gap: 8px;
+
+    &__number {
+      text-align: center;
+      border-radius: 4px;
+      padding: 0 !important;
+      width: 100%;
+      background-color: var(--dark-brown);
+      color:hsl(27, 66%, 92%);
+      padding: 4px;
+      font-weight: 700;
+      font-size: 8px;
+      line-height: 23px;
+      margin-bottom: 8px;
+      display: none;
+    }
 
     &__column {
       width: 100%;
@@ -226,6 +242,11 @@ END GLOBAL
 
     &__item {
       flex: 1 1;
+      &:hover {
+        .chart__number {
+          display: block;
+        }
+      }
     }
 
     &__label {
